added 'skip to content' to all pages working - fixed tabindex on all pages

--- a/attractions.html
+++ b/attractions.html
@@ -37,17 +37,18 @@
   </head>
 
   <body>
+    <a href="#site-main" class="skip-to-content" tabindex="1">Skip to Content</a>
     <header>
       <nav>
-        <a href="index.html" class="main-title"
+        <a href="index.html" class="main-title" tabindex="2"
           ><img src="media/logo.png" alt="Logo of Shinjuku City"
         /></a>
         <ul id="nav-buttons">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="attractions.html">Attractions</a></li>
-          <li><a href="food.html">Food</a></li>
-          <li><a href="credits.html">Credits</a></li>
+          <li><a href="index.html" tabindex="3">Home</a></li>
+          <li><a href="about.html" tabindex="4">About</a></li>
+          <li><a href="attractions.html" tabindex="5">Attractions</a></li>
+          <li><a href="food.html" tabindex="6">Food</a></li>
+          <li><a href="credits.html" tabindex="7">Credits</a></li>
         </ul>
 
         <button
@@ -79,7 +80,7 @@
       </div>
 
       <div class="attractions-content">
-        <a href="#" class="popup-btn" data-popup="popup1"
+        <a href="#" class="popup-btn" data-popup="popup1" tabindex="8"
           ><h3>Gyoen National Garden</h3>
           <img
             src="media/gyoen.jpg"
@@ -88,7 +89,7 @@
           />
         </a>
 
-        <a href="#" class="popup-btn" data-popup="popup2"
+        <a href="#" class="popup-btn" data-popup="popup2" tabindex="9"
           ><h3>Kabukicho</h3>
           <img
             src="media/kabukicho.jpg"
@@ -97,7 +98,7 @@
           />
         </a>
 
-        <a href="#" class="popup-btn" data-popup="popup3"
+        <a href="#" class="popup-btn" data-popup="popup3" tabindex="10"
           ><h3>Robot Restaurant</h3>
           <img
             src="media/robot.jpg"
@@ -106,7 +107,7 @@
           />
         </a>
 
-        <a href="#" class="popup-btn" data-popup="popup4"
+        <a href="#" class="popup-btn" data-popup="popup4" tabindex="11"
           ><h3>Golden Gai</h3>
           <img
             src="media/goldengai.jpg"
@@ -186,10 +187,10 @@
       </div>
     </main>
 
-    <footer>
+    <footer tabindex="12">
       <p>
         &copy; 2024
-        <a class="footer-link" href="https://laust.ca/">Leibrandt Austria. </a>
+        <a class="footer-link" href="https://laust.ca/" tabindex="13">Leibrandt Austria. </a>
         For Educational Purposes
       </p>
     </footer>
