--- a/credits.html
+++ b/credits.html
@@ -34,18 +34,18 @@
   </head>
 
   <body>
-
+    <a href="#site-main" class="skip-to-content" tabindex="1">Skip to Content</a>
     <header>
       <nav>
-        <a href="index.html" class="main-title"
+        <a href="index.html" class="main-title" tabindex="2"
           ><img src="media/logo.png" alt="country-logo"
         /></a>
         <ul id="nav-buttons">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="attractions.html">Attractions</a></li>
-          <li><a href="food.html">Food</a></li>
-          <li><a href="credits.html">Credits</a></li>
+          <li><a href="index.html" tabindex="3">Home</a></li>
+          <li><a href="about.html" tabindex="4">About</a></li>
+          <li><a href="attractions.html" tabindex="5">Attractions</a></li>
+          <li><a href="food.html" tabindex="6">Food</a></li>
+          <li><a href="credits.html" tabindex="7">Credits</a></li>
         </ul>
 
         <button
@@ -79,186 +79,186 @@
         <h2>Credits & References</h2>
         <table>
           <tr>
-            <th><em>Resource</em></th>
-            <th><em>Source Link</em></th>
+            <th tabindex="8"><em>Resource</em></th>
+            <th tabindex="9"><em>Source Link</em></th>
           </tr>
-          <tr>
-            <th>Shinjuku Information</th>
+          <tr >
+            <th tabindex="10">Shinjuku Information</th>
             <th>
-              <a href="https://en.wikipedia.org/wiki/Shinjuku" target="_blank">
+              <a href="https://en.wikipedia.org/wiki/Shinjuku" target="_blank" tabindex="11">
                 Wikipedia
               </a>
             </th>
           </tr>
           <tr>
-            <th>Favicon</th>
+            <th tabindex="12">Favicon</th>
             <th>
               <a
                 href="https://pixels.com/featured/emblem-of-shinjuku-a-z.html"
-                target="_blank"
+                target="_blank" tabindex="13"
               >
                 Pixels
               </a>
             </th>
           </tr>
-          <tr>
-            <th>Background Japan Video</th>
+          <tr >
+            <th tabindex="14">Background Japan Video</th>
             <th>
               <a
                 href="https://pixabay.com/videos/lake-sunset-trees-leaves-japan-91562/"
-                target="_blank"
+                target="_blank" tabindex="15"
               >
                 Pixabay
               </a>
             </th>
           </tr>
-          <tr>
-            <th>Shinjuku History Image</th>
+          <tr >
+            <th tabindex="16">Shinjuku History Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/street-japanese-kimonos-friends-5429879/"
-                target="_blank"
+                target="_blank" tabindex="17"
               >
                 Pixabay
               </a>
             </th>
           </tr>
-          <tr>
-            <th>Geography Image</th>
+          <tr >
+            <th tabindex="18">Geography Image</th>
             <th>
               <a
-                href="https://pixabay.com/photos/railway-train-station-train-7860168/"
+                href="https://pixabay.com/photos/railway-train-station-train-7860168/" target="_blank" tabindex="19"
               >
                 Pixabay
               </a>
             </th>
           </tr>
-          <tr>
-            <th>Transportation Image</th>
+          <tr >
+            <th tabindex="20">Transportation Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/railway-train-station-train-7860168/"
-                target="_blank"
+                target="_blank" tabindex="21"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Kabukicho Image</th>
+          <tr >
+            <th tabindex="22">Kabukicho Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/shinjuku-kabukicho-japan-tokyo-2283158/"
-                target="_blank"
+                target="_blank" tabindex="23"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Robot Restaurant Image</th>
+          <tr >
+            <th tabindex="24">Robot Restaurant Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/japan-asia-neon-streetm-city-4141581/"
-                target="_blank"
+                target="_blank" tabindex="25"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Golden Gai Image</th>
+          <tr >
+            <th tabindex="26">Golden Gai Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/tokyo-street-alone-person-walk-5772124/"
-                target="_blank"
+                target="_blank" tabindex="27"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Anthony Bourdain Quote Image</th>
+          <tr >
+            <th tabindex="28">Anthony Bourdain Quote Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/tokyo-street-alone-person-walk-5772124/"
-                target="_blank"
+                target="_blank" tabindex="29"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Fuunji Image</th>
+          <tr >
+            <th tabindex="30">Fuunji Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/ramen-soup-food-asian-pasta-lunch-7238669/"
-                target="_blank"
+                target="_blank" tabindex="31"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Katsukura Image</th>
+          <tr >
+            <th tabindex="32">Katsukura Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/restaurant-cooking-japanese-meal-1690696/"
-                target="_blank"
+                target="_blank" tabindex="33"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Mentsu-Dan Image</th>
+          <tr >
+            <th tabindex="34"> Mentsu-Dan Image </th>
             <th>
               <a
                 href="https://pixabay.com/photos/food-hokkaido-japan-no-studio-5390795/"
-                target="_blank"
+                target="_blank" tabindex="35"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Kyubey Image</th>
+          <tr >
+            <th tabindex="36">Kyubey Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/sushi-roll-images-sushi-rolls-sushi-4395598/"
-                target="_blank"
+                target="_blank" tabindex="37"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Sadaharu Aoki Image</th>
+          <tr >
+            <th tabindex="38">Sadaharu Aoki Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/cake-breakfast-dessert-sweet-ball-2610754/"
-                target="_blank"
+                target="_blank" tabindex="39"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Hajimeya Image</th>
+          <tr >
+            <th tabindex="40">Hajimeya Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/chiangmai-market-night-thailand-5308180/"
-                target="_blank"
+                target="_blank" tabindex="41"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Tsunahachi Image</th>
+          <tr >
+            <th tabindex="42">Tsunahachi Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/shrimp-tempura-shrimp-fry-cooking-4665687/"
-                target="_blank"
+                target="_blank" tabindex="43"
                 >Pixabay</a
               >
             </th>
           </tr>
-          <tr>
-            <th>Gyoen Image</th>
+          <tr >
+            <th tabindex="44">Gyoen Image</th>
             <th>
               <a
                 href="https://pixabay.com/photos/tokyo-park-nature-japan-asia-2805500/"
-                target="_blank"
+                target="_blank" tabindex="45"
                 >Pixabay</a
               >
             </th>
@@ -269,20 +269,20 @@
       <br />
       <br />
       <br />
-      <div class="subscribe-form">
+      <div class="subscribe-form" tabindex="46">
         <h2>Subscribe For Upcoming Events!</h2>
         <form action="#" method="post">
-          <input type="text" name="name" placeholder="Your Name" required />
-          <input type="email" name="email" placeholder="Your Email" required />
-          <button type="submit">Enter</button>
+          <input type="text" name="name" placeholder="Your Name" tabindex="47" required />
+          <input type="email" name="email" placeholder="Your Email" tabindex="48" required />
+          <button type="submit" tabindex="49">Enter</button>
         </form>
       </div>
     </main>
 
-    <footer>
+    <footer tabindex="50">
       <p>
         &copy; 2024
-        <a class="footer-link" href="https://laust.ca/">Leibrandt Austria. </a>
+        <a class="footer-link" href="https://laust.ca/" tabindex="51">Leibrandt Austria. </a>
         For Educational Purposes
       </p>
     </footer>
