--- a/food.html
+++ b/food.html
@@ -37,17 +37,18 @@
   </head>
 
   <body>
+    <a href="#site-main" class="skip-to-content" tabindex="1">Skip to Content</a>
     <header>
       <nav>
-        <a href="index.html" class="main-title" tabindex="1"
+        <a href="index.html" class="main-title" tabindex="2"
           ><img src="media/logo.png" alt="Logo of Shinjuku City"
         /></a>
         <ul id="nav-buttons">
-          <li><a href="index.html" tabindex="2">Home</a></li>
-          <li><a href="about.html" tabindex="3">About</a></li>
-          <li><a href="attractions.html" tabindex="4">Attractions</a></li>
-          <li><a href="food.html" tabindex="5">Food</a></li>
-          <li><a href="credits.html" tabindex="6">Credits</a></li>
+          <li><a href="index.html" tabindex="3">Home</a></li>
+          <li><a href="about.html" tabindex="4">About</a></li>
+          <li><a href="attractions.html" tabindex="5">Attractions</a></li>
+          <li><a href="food.html" tabindex="6">Food</a></li>
+          <li><a href="credits.html" tabindex="7">Credits</a></li>
         </ul>
 
         <button
@@ -77,7 +78,7 @@
           Your browser does not support the video tag.
         </video>
       </div>
-      <div class="quote" tabindex="7">
+      <div class="quote" tabindex="8">
         <blockquote
           cite="https://explorepartsunknown.com/tokyo/bourdains-field-notes-tokyo/"
         >
@@ -90,42 +91,42 @@
       </div>
 
       <div class="food-content">
-        <div class="food-item" tabindex="8">
+        <div class="food-item" tabindex="9">
           <h3>For Ramen:</h3>
           <h2>Fuunji</h2>
           <img src="media/fuunji.jpg" alt="Image of Ramen bowl" />
           <div class="overlay"> <div class="overlay-text">mmm ramen... 🍲</div> </div>
         </div>
 
-        <div class="food-item" tabindex="9">
+        <div class="food-item" tabindex="10">
           <h3>For Tonkatsu:</h3>
           <h2>Katsukura</h2>
           <img src="media/katsukura.jpg" alt="Image of cooked Tempura" />
           <div class="overlay"> <div class="overlay-text">curry tonkatsu! 🍛</div> </div>
         </div>
 
-        <div class="food-item" tabindex="10">
+        <div class="food-item" tabindex="11">
           <h3>For Udon:</h3>
           <h2>Mentsu-Dan</h2>
           <img src="media/mentsudan.jpg" alt="Image of Udon bowl" />
           <div class="overlay"> <div class="overlay-text">fatter ramen noodles 🍜</div> </div>
         </div>
 
-        <div class="food-item" tabindex="11">
+        <div class="food-item" tabindex="12">
           <h3>For Sushi:</h3>
           <h2>Kyubey</h2>
           <img src="media/kyubey.jpg" alt="Image of assorted sushi" />
           <div class="overlay"> <div class="overlay-text">don't expect cali rolls here 🍣</div> </div>
         </div>
 
-        <div class="food-item" tabindex="12">
+        <div class="food-item" tabindex="13">
           <h3>For Sweets:</h3>
           <h2>Sadaharu Aoki</h2>
           <img src="media/sadaharu.jpg" alt="Image of pastry cake" />
           <div class="overlay"> <div class="overlay-text">cake cake cake! 🍥</div> </div>
         </div>
 
-        <div class="food-item" tabindex="13">
+        <div class="food-item" tabindex="14">
           <h3>For Yakitori:</h3>
           <h2>Hajimeya</h2>
           <img
@@ -135,7 +136,7 @@
           <div class="overlay"> <div class="overlay-text">bbq on steroids! 🍖</div> </div>
         </div>
 
-        <div class="food-item" tabindex="14">
+        <div class="food-item" tabindex="15">
           <h3>For Tempura:</h3>
           <h2>Tsunahachi</h2>
           <img src="media/tempura.jpg" alt="Image of shrimp Tempura" />
@@ -144,10 +145,10 @@
       </div>
     </main>
 
-    <footer>
+    <footer tabindex="16">
       <p>
         &copy; 2024
-        <a class="footer-link" href="https://laust.ca/" tabindex="15">Leibrandt Austria. </a>
+        <a class="footer-link" href="https://laust.ca/" tabindex="17">Leibrandt Austria. </a>
         For Educational Purposes
       </p>
     </footer>
