--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
   </head>
 
   <body>
+    <a href="#site-main" class="skip-to-content" tabindex="1">Skip to Content</a>
     <header>
       <nav>
         <a href="index.html" class="main-title" tabindex="2"
@@ -54,7 +55,6 @@
           id="hamMenu"
           onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
           aria-label="Main Menu"
-          tabindex="8"
         >
           <svg class="hamburger" width="75" height="75" viewBox="0 0 100 100">
             <path
@@ -71,9 +71,9 @@
       </nav>
     </header>
 
-    <main id="site-main" tabindex="9">
+    <main id="site-main">
       <div class="video-background">
-        <video autoplay muted loop id="background-video" tabindex="10">
+        <video autoplay muted loop id="background-video">
           <source src="media/japanVideo.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
@@ -84,9 +84,9 @@
           id="shinHistory"
           src="media/shinjuku-history.jpg"
           alt="Image of Japanese women in kimono's, older Japan era"
-          tabindex="11"
+          tabindex="8"
         />
-        <div class="history" tabindex="12">
+        <div class="history" tabindex="9">
           <h2>History</h2>
           <p>
             In 1634, during the Edo period, as the outer moat of the Edo Castle
@@ -105,14 +105,14 @@
           id="shinGeo"
           src="media/shinjuku-geo.jpg"
           alt="Image of Shinjuku streets at night"
-          tabindex="13"
+          tabindex="10"
         />
-        <div class="geography" tabindex="14">
+        <div class="geography" tabindex="11">
           <h2>Geography</h2>
           <p class="gyoen">
             Shinjuku is surrounded by Chiyoda to the east; Bunkyo and Toshima to
             the north; Nakano to the west, and Shibuya and Minato to the south.
-            <a href="attractions.html" tabindex="15">Shinjuku Gyo-en National Garden</a> and NTT DoCoMo Yoyogi Building The
+            <a href="attractions.html" tabindex="12">Shinjuku Gyo-en National Garden</a> and NTT DoCoMo Yoyogi Building The
             current city of Shinjuku grew out of several separate towns and
             villages, which have retained some distinctions despite growing
             together as part of the Tokyo metropolis.
@@ -122,9 +122,9 @@
           id="shinTransport"
           src="media/shinjuku-transport.jpg"
           alt="Image of a red train at a station"
-          tabindex="16"
+          tabindex="13"
         />
-        <div class="transport" tabindex="17">
+        <div class="transport" tabindex="14">
           <h2>Transportation</h2>
           <p>
             Shinjuku is a major urban transit hub. Shinjuku Station sees an
@@ -137,10 +137,10 @@
       </div>
     </main>
 
-    <footer tabindex="18">
+    <footer tabindex="15">
       <p>
         &copy; 2024
-        <a class="footer-link" href="https://laust.ca/" tabindex="19">Leibrandt Austria. </a>
+        <a class="footer-link" href="https://laust.ca/" tabindex="15">Leibrandt Austria. </a>
         For Educational Purposes
       </p>
     </footer>
